--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>网站备案中</title>
+<title>备案中</title>
 <style type="text/css">
 *{ padding: 0; margin: 0; }
 html{ overflow-y: scroll; }
@@ -17,7 +17,7 @@ h1{ font-size: 32px; line-height: 48px; }
 <br><br><br><br><br>
 <center>
 <p class="face">:)</p>
-<h1>网站备案中</h1>
+<h1>备案中</h1>
 </center>
 <div class="content">
 </div>
