--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ h1{ font-size: 32px; line-height: 48px; }
 </div>
 <br><br><br><br><br><br>
 <div class="copyright">
-<p><center>[ WE WILL DO IT BATTER SOON ]</center></p>
+<p><center>[ WE WILL DO IT BETTER SOON ]</center></p>
 </div>
 </body></html>
