--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title></title>
+<title>域名低价出售中</title>
 <style type="text/css">
 *{ padding: 0; margin: 0; }
 html{ overflow-y: scroll; }
@@ -17,9 +17,9 @@ h1{ font-size: 32px; line-height: 48px; }
 <br><br><br><br><br>
 <center>
 <p class="face">:)</p>
-<h1>域名万网出售中
+<h1>域名超低价出售中
 <a href="https://wanwang.aliyun.com/nametrade/detail/online.html?spm=5176.8070854.1024.109.755KN9&domainName=cniao.net&orgType=undefined&productType=2">>>点击进入<<</a>
-</h1>
+状态:OK</h1>
 </center>
 <div class="content">
 </div>
