--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ h1{ font-size: 32px; line-height: 48px; }
 <center>
 <p class="face">:)</p>
 <h1>域名超低价出售中
-<a href="https://wanwang.aliyun.com/nametrade/detail/online.html?spm=5176.8070854.1024.109.755KN9&domainName=cniao.net&orgType=undefined&productType=2">>>点击进入<<</a>
+<a href="http://t.cn/RiBL9FZ">>>点击进入<<</a>
 状态:OK</h1>
 </center>
 <div class="content">
