--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@ h1{ font-size: 32px; line-height: 48px; }
 <br><br>
 <br><br><br><br><br>
 <center>
-<p class="face">:)</p>
-<h1>域名超低价出售中
-<a href="http://t.cn/RiBL9FZ">>>点击进入<<</a>
-</h1>
+<p class="face"><p><center>[ WE WILL DO IT BETTER SOON ]</center></p></p>
+<h1></h1>
 </center>
 <div class="content">
 </div>
 </div>
 <br><br><br><br><br><br>
 <div class="copyright">
-<p><center>[ WE WILL DO IT BETTER SOON ]</center></p>
 </div>
 </body></html>
