--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>域名低价出售中</title>
+<title>WE WILL DO IT BETTER SOON</title>
 <style type="text/css">
 *{ padding: 0; margin: 0; }
 html{ overflow-y: scroll; }
@@ -16,7 +16,7 @@ h1{ font-size: 32px; line-height: 48px; }
 <br><br>
 <br><br><br><br><br>
 <center>
-<p class="face"><p><center>[ WE WILL DO IT BETTER SOON ]</center></p></p>
+<p>[ WE WILL DO IT BETTER SOON ]</p>
 <h1></h1>
 </center>
 <div class="content">
